LOG Updated to 1.22 (by updates_builder)

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,4 @@
+removed_sources:
+  Tree-Simple-1.18.tar.bz2: 7f7ef59ea6598151987fa632825b74e2a648845e
 sources:
-  "Tree-Simple-1.18.tar.bz2": 7f7ef59ea6598151987fa632825b74e2a648845e
+  Tree-Simple-1.22.tgz: 0f67a027170580865bb6903bfeadcae985fae522
