Updated to 1.23 (by updates_builder)

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,4 +1,5 @@
 removed_sources:
   Tree-Simple-1.18.tar.bz2: 7f7ef59ea6598151987fa632825b74e2a648845e
-sources:
   Tree-Simple-1.22.tgz: 0f67a027170580865bb6903bfeadcae985fae522
+sources:
+  Tree-Simple-1.23.tgz: a64a7afed06b8388ffbffc9d430953c0a6b4ca03
